--- a/app/Resources/views/user/createuser.html.twig
+++ b/app/Resources/views/user/createuser.html.twig
@@ -13,7 +13,7 @@
                 {{ form_row(form.plainPassword.second, {
                     'label': 'Re-enter Password'
                 }) }}
-                <button type="submit" class="btn btn-primary" formnovalidate>Register</button>
+                <button type="submit" class="button-green" formnovalidate>Register</button>
                 {{ form_end(form) }}
             </div>
         </div>
