--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -15,7 +15,7 @@
                 }) }}
                 {{ form_row(form.role) }}
 
-                <button type="submit" class="btn btn-primary" formnovalidate>Register</button>
+                <button type="submit" class="button-green" formnovalidate>Register</button>
                 {{ form_end(form) }}
             </div>
         </div>
