--- a/app/Resources/views/customer/edit.html.twig
+++ b/app/Resources/views/customer/edit.html.twig
@@ -13,16 +13,16 @@
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
 
-    <input type="submit" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
+    <input type="submit" class="button-green" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('customer_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('customer_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input class="button-red" type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
