--- a/app/Resources/views/customer/index.html.twig
+++ b/app/Resources/views/customer/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Customers list</h1>
+    <h2>Customers Index Page</h2>
 
     <table>
         <thead>
@@ -26,10 +26,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('customer_show', { 'id': customer.id }) }}">View</a>
+                            <a class="button-blue" href="{{ path('customer_show', { 'id': customer.id }) }}">View</a>
                         </li>
                         <li>
-                            <a href="{{ path('customer_edit', { 'id': customer.id }) }}">Edit</a>
+                            <a class="button-orange" href="{{ path('customer_edit', { 'id': customer.id }) }}">Edit</a>
                         </li>
                     </ul>
                 </td>
@@ -52,7 +52,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('customer_new') }}">Create a new customer</a>
+            <a class="button-green" href="{{ path('customer_new') }}">Create a new customer</a>
         </li>
     </ul>
 {% endblock %}
