--- a/app/Resources/views/donotsend/edit.html.twig
+++ b/app/Resources/views/donotsend/edit.html.twig
@@ -1,20 +1,20 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Update the Employee marked as Do Not Send to this Service User</h1>
+    <h3>Update the Employee marked as Do Not Send to this Service User</h3>
 
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes"/>
+    <input class="button-green" type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('donotsend_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('donotsend_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input class="button-red" type="submit" value="Remove Do Not Send Flag">
             {{ form_end(delete_form) }}
         </li>
     </ul>
