--- a/app/Resources/views/employeeabsence/edit.html.twig
+++ b/app/Resources/views/employeeabsence/edit.html.twig
@@ -5,16 +5,16 @@
 
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes"/>
+    <input class="button-green" type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('employeeabsence_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('employeeabsence_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input class="button-red" type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
