--- a/app/Resources/views/employeeabsence/show.html.twig
+++ b/app/Resources/views/employeeabsence/show.html.twig
@@ -6,9 +6,14 @@
     <table>
         <tbody>
         <tr>
+            <th>Employee</th>
+            <td>{{ employeeAbsence.employeeId }}</td>
+        </tr>
+        <tr>
             <th>Reason</th>
             <td>{{ employeeAbsence.absenceReason }}</td>
         </tr>
+
         <tr>
             <th>Starttime</th>
             <td>{% if employeeAbsence.startTime %}{{ employeeAbsence.startTime|date('Y-m-d H:i:s') }}{% endif %}</td>
@@ -23,14 +28,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('employeeabsence_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('employeeabsence_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('employeeabsence_edit', { 'id': employeeAbsence.id }) }}">Edit</a>
+            <a class="button-orange" href="{{ path('employeeabsence_edit', { 'id': employeeAbsence.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input class="button-red" type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
