--- a/app/Resources/views/employeeunavailability/edit.html.twig
+++ b/app/Resources/views/employeeunavailability/edit.html.twig
@@ -5,17 +5,19 @@
     <h1>Employee Unavailability Update Page</h1>
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
+    <input class="button-green" type="submit" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('employee_index') }}" class="btn btn-success btn-sm" role="button">Back to the EMployee
+            <a class="button-grey" href="{{ path('employee_index') }}" class="btn btn-success btn-sm" role="button">Back
+                to the EMployee
                 list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete This Unavailable TIme" class="btn btn-success btn-sm" role="button">
+            <input class="button-red" type="submit" value="Delete This Unavailable TIme" class="btn btn-success btn-sm"
+                   role="button">
             {{ form_end(delete_form) }}
         </li>
     </ul>
