--- a/app/Resources/views/office/edit.html.twig
+++ b/app/Resources/views/office/edit.html.twig
@@ -4,12 +4,13 @@
     <h1>Office edit</h1>
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes"/>
+    <input class="button-green" type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('office_index') }}" class="btn btn-success btn-sm" role="button">Back to the Offices
+            <a class="button-grey" href="{{ path('office_index') }}" class="btn btn-success btn-sm" role="button">Back
+                to the Offices
                 list</a>
         </li>
 
