--- a/app/Resources/views/rosterassignedemployee/edit.html.twig
+++ b/app/Resources/views/rosterassignedemployee/edit.html.twig
@@ -5,16 +5,17 @@
 
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes"/>
+    <input class="button-green" type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('rosterassignedemployee_index') }}">Back to the Assigned Employees list</a>
+            <a class="button-blue" href="{{ path('rosterassignedemployee_index') }}">Back to the Assigned Employees
+                list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete Assignment">
+            <input class="button-red" type="submit" value="Delete Assignment">
             {{ form_end(delete_form) }}
         </li>
     </ul>
