--- a/app/Resources/views/rosterassignedemployee/show.html.twig
+++ b/app/Resources/views/rosterassignedemployee/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '_base.html.twig' %}
 
 {% block body %}
     <h1>Rosterassignedemployee</h1>
@@ -6,22 +6,27 @@
     <table>
         <tbody>
         <tr>
-            <th>Id</th>
-            <td>{{ rosterAssignedEmployee.id }}</td>
+            <th>Employee</th>
+            <td>{{ rosterAssignedEmployee.employeeId }}</td>
+        </tr>
+        <tr>
+            <th>Service User</th>
+            <td>{{ rosterAssignedEmployee.rosterId.serviceUserId }}</td>
         </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('rosterassignedemployee_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('rosterassignedemployee_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('rosterassignedemployee_edit', { 'id': rosterAssignedEmployee.id }) }}">Edit</a>
+            <a class="button-orange"
+               href="{{ path('rosterassignedemployee_edit', { 'id': rosterAssignedEmployee.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Remove this employee from the Roster">
+            <input class="button-red" type="submit" value="Remove this employee from the Roster">
             {{ form_end(delete_form) }}
         </li>
     </ul>
