--- a/app/Resources/views/serviceuserassignedemployee/index.html.twig
+++ b/app/Resources/views/serviceuserassignedemployee/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Serviceuserassignedemployees list</h1>
+    <h1>Service users and their Assigned Employees list</h1>
 
     <table>
         <thead>
@@ -16,14 +16,27 @@
                 <td>
                     <a href="{{ path('serviceuserassignedemployee_show', { 'id': serviceUserAssignedEmployee.id }) }}">{{ serviceUserAssignedEmployee.id }}</a>
                 </td>
+
+                <td>
+                    {{ serviceUserAssignedEmployee.EmployeeId }}
+                    {{ serviceUserAssignedEmployee.EmployeeId.AddressLine1 }} {{ serviceUserAssignedEmployee.EmployeeId.AddressLine2 }} {{ serviceUserAssignedEmployee.EmployeeId.AddressLine3 }} {{ serviceUserAssignedEmployee.EmployeeId.CountyPostcode }}
+
+                </td>
+                <td> is assigned to</td>
+                <td>
+                    {{ serviceUserAssignedEmployee.ServiceUserId }} {{ serviceUserAssignedEmployee.ServiceUserId.AddressLine1 }} {{ serviceUserAssignedEmployee.ServiceUserId.AddressLine2 }} {{ serviceUserAssignedEmployee.ServiceUserId.AddressLine3 }} {{ serviceUserAssignedEmployee.ServiceUserId.CountyPostcode }}
+                </td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('serviceuserassignedemployee_show', { 'id': serviceUserAssignedEmployee.id }) }}">show</a>
+                            <a class="button-blue"
+                               href="{{ path('serviceuserassignedemployee_show', { 'id': serviceUserAssignedEmployee.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('serviceuserassignedemployee_edit', { 'id': serviceUserAssignedEmployee.id }) }}">edit</a>
+                            <a class="button-orange"
+                               href="{{ path('serviceuserassignedemployee_edit', { 'id': serviceUserAssignedEmployee.id }) }}">Manage</a>
                         </li>
+
                     </ul>
                 </td>
             </tr>
@@ -31,9 +44,5 @@
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('serviceuserassignedemployee_new') }}">Create a new serviceUserAssignedEmployee</a>
-        </li>
-    </ul>
+
 {% endblock %}
