--- a/app/Resources/views/user/new.html.twig
+++ b/app/Resources/views/user/new.html.twig
@@ -5,12 +5,12 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <input type="submit" value="Create"/>
+    <input class="button-green" type="submit" value="Create"/>
     {{ form_end(form) }}
 
     <ul>
         <li>
-            <a href="{{ path('user_index') }}">Back to the list</a>
+            <a class="button-grey" href="{{ path('user_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
